--- a/index.html
+++ b/index.html
@@ -1,45 +1,51 @@
+<style>
+object {
+  position: absolute;
+  animation: example 10s linear infinite;
+}
 
-<!DOCTYPE html>
-<html>
-<head>
-	
-	<title>Quick Start - Leaflet</title>
+@keyframes example {
+  0%   {top:-150px; transform:rotate(0deg);}
+  100% {top:100vh;transform:rotate(720deg);}
+}
 
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	
-	<link rel="shortcut icon" type="image/x-icon" href="docs/images/favicon.ico" />
+.croissant {
+    top: -150vh;
+    height: 150px;
+    width: 150px;
+    background-image: url(croissant.svg);
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+}
 
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css" integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA==" crossorigin=""/>
-    <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js" integrity="sha512-QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Qw5lwrg==" crossorigin=""></script>
-
-
-	
+</style>
 </head>
 <body>
 
 
-
-<div id="mapid" style="width:100%; height: 800px;"></div>
-<script>
-
-	var mymap = L.map('mapid').setView([48.8769, 2.3840], 18);
-
-	L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
-		maxZoom: 18,
-		attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, ' +
-			'<a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
-			'Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
-		id: 'mapbox.streets'
-	}).addTo(mymap);
-
-    var marker = L.marker([48.8773, 2.3840]).addTo(mymap);
-    marker.bindPopup("<iframe width=\"300\" height=\"200\" sandbox=\"allow-same-origin allow-scripts\" src=\"https://video.ploud.fr/videos/embed/db5ecbe5-bd6e-471a-b00d-869b08bc738d\" frameborder=\"0\" allowfullscreen></iframe>", maxWidth=1000, maxHeigh=1000);
-
-
-</script>
-
-
+<object id="croissant-template"  class="croissant"></object>
 
 </body>
+
+
+<script>
+
+var NUM_CROISSANT = 30;
+
+var croissant_template = document.getElementById("croissant-template");
+
+for (var id = 0, len = NUM_CROISSANT; id < len; id++) {
+
+    var croissant_id = "croissant-" + id;
+
+    var new_element = croissant_template.cloneNode()
+
+    new_element.id = croissant_id;
+    new_element.style.animationDelay = (Math.random() * 10) + "s";
+    new_element.style.left = (Math.random() * 100) + "vw";
+
+    document.body.appendChild(new_element);
+}
+</script>
 </html>
